--- a/Day1/ifElse.html
+++ b/Day1/ifElse.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title></title>
-</head>
-<body>
-    
-</body>
-<script>
+  </head>
+  <body></body>
+  <script>
+    let value = false;
 
-</script>
+    if (value === true) {
+      console.log("Value is true");
+    } else if (value === false) {
+      console.log("Value is false");
+    } else {
+      console.log("Value is neither true nor false");
+    }
+  </script>
 </html>
