--- a/Day1/dataTypes.html
+++ b/Day1/dataTypes.html
@@ -8,36 +8,41 @@
   </head>
   <body></body>
   <script>
-
     /* String */
-    let name = "Nium"
-    console.log(name + ":" +typeof(name))
+    let name = "Nium";
+    console.log(name + ":" + typeof name);
+    // Output : string
 
     /* Number */
     let age = 5;
-    console.log(age + ":" +typeof(age))
+    console.log(age + ":" + typeof age);
+    // Output : number
 
     /* object */
     let fullName = { first: "Nium", last: "Instarem" };
-    console.log(...fullName + ":" +typeof(fullName))
+    console.log(...(fullName + ":" + typeof fullName));
+    // Output : object
 
     /* Boolean */
     let truth = false;
-    console.log(truth + ":" +typeof(truth))
+    console.log(truth + ":" + typeof truth);
+    // Output : boolean
 
     /* Array */
-    let language = ["HTML", "CSS", "JS"]
-    console.log(...language + ":" +typeof(language))
+    let language = ["HTML", "CSS", "JS"];
+    console.log(...(language + ":" + typeof language));
+    // Output : object
     // Here typeof will return 'object' ,  as javascript recognises array as a type of object
 
     /* Undefined */
     let x;
-    console.log("X is :" + typeof(x))
+    console.log("X is :" + typeof x);
+    // Output : undefined
 
     /* Null */
     let val = null;
-    console.log(val + ":" +typeof(val))
+    console.log(val + ":" + typeof val);
+    // Output : object
     // Here typoOf will return 'object' , this is a javascript bug.
-
   </script>
 </html>
