--- a/Day3/map.html
+++ b/Day3/map.html
@@ -1,15 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
-</head>
-<body>
-    
-</body>
-<script>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Map function</title>
+  </head>
+  <body></body>
+  <script>
+    // map() creates a new array from calling a
+    // function for every array element.
+    // map() calls a function once for each element in an array.
+    // map() does not execute the function for empty elements.
+    // map() does not change the original array
 
-</script>
+    //The forEach() method does not create a new array based on the given array. The map() method creates an entirely new array. The forEach() method returns “undefined“. The map() method returns the newly created array according to the provided callback function.
+
+    
+    const persons = [
+      { firstname: "Malcom", lastname: "Reynolds" },
+      { firstname: "Kaylee", lastname: "Frye" },
+      { firstname: "Jayne", lastname: "Cobb" },
+    ];
+
+    const peopleFullName = persons.map((currentValue, index, arr) => {
+      return [currentValue.firstname, currentValue.lastname].join(" ");
+    });
+
+    console.log(peopleFullName)
+  </script>
 </html>
